Fix libtiff compilation with MinGW-w32 6.3

Backport changes of 879876e047d9aabe4b144944449a5ffe5a37ffed from
master.

Closes #17936.

Closes https://github.com/wxWidgets/wxWidgets/pull/766